why not commited... Commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,10 @@
+.DS_Store
+.gitignore
 .gradle
-/build/
-!gradle/wrapper/gradle-wrapper.jar
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-
-### IntelliJ IDEA ###
 .idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
+react-truffle/build
+react-truffle/node_modules
+truffle/build
+truffle/installed_contracts
+web-frontend/build
+web-frontend/node_modules
